Launcher3: import reversed google now lib
* Imported from https://github.com/patriksletmo/launcherclient/

Change-Id: I84582ae812b8ecb0d694ae2396843effdcf1219c

Launcher3: support google now tab

Change-Id: I6efc1d5186e0f1bd4fa78ae7231999b984ce7222

LauncherClient: make sure service is connected before trying to unbind

Change-Id: If092db391be12db4f89ed292d1a2f5f9daef8c17

Launcher3: animate workspace when animating the Google now page

Change-Id: I6306d8eeee5ef87b3faf1d9dcb6825e67eb65d45

Launcher3: make Google now left page optional

* Always destroy the launcher client when disabled, don't just disable the scrolling page.

Change-Id: Ic9a990c03c29e3ef280242c7a2d8b3bb0d049566

Launcher3: cleanup launcher tab preference

 Remove preference is search package is not available
 Consolidate BroadcastReceiver and IntentFilter

Change-Id: Idcdf7380ce25a66f1dc6c3cd993ae76d089cdd36

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -22,4 +22,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="theme_style_light">Light style</string>
     <string name="theme_style_dark">Dark style</string>
 
+    <string name="left_tab_label">Google Now tab</string>
+    <string name="left_tab_description">Toggle Google Now integration</string>
 </resources>
