--- a/res/values/arrow_strings.xml
+++ b/res/values/arrow_strings.xml
@@ -25,4 +25,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="number_of_hotseat_title">Homescreen quicklaunch icons</string>
     <string name="state_loading">Applying\u2026</string>
     <string name="app_drawer_category_title">App drawer</string>
+    <!-- Icon packs -->
+    <string name="icon_pack">Icon pack</string>
+    <string name="icon_pack_summary">Select a custom icon pack</string>
 </resources>
