--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -58,6 +58,13 @@
         android:defaultValue=""
         android:persistent="false" />
 
+     <SwitchPreference
+        android:key="pref_desktop_show_label"
+        android:title="@string/desktop_show_label_title"
+        android:summary="@string/desktop_show_label_summary"
+        android:defaultValue="true"
+        android:persistent="true"/>
+
     <ListPreference
         android:key="pref_theme_style"
         android:title="@string/theme_style_title"
