Implement hidden app feature
abc ezio84: port to omnirom launcher3

Allow user to hide/show app on the app drawer using multi-selection.
To do that a custom app filter class will be used.
By clicking the check menu item selected app will be added to the hide
list set. On back pressed no changes will be applied.

Change-Id: I64387fcc399eef0c8d9fe9b4b36c11646143f40b
Signed-off-by: enricocid <enrico2588@gmail.com>

Launcher3: Fix incorrect string value

*DU Edits*
- Left out the workspace code found in the commit below because our intention
is to move it to Settings anyways. No need to port it forward just to remove it.

https://github.com/DirtyUnicorns/android_packages_apps_Launcher3/commit/634c900e9a10384641493a83e31973b443690367

Change-Id: I044bd0c81fa88d510ba47c86f6cb1e8f4bc0374f

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -38,4 +38,11 @@
 
     <color name="all_apps_bg_hand_fill">#E5E5E5</color>
     <color name="all_apps_bg_hand_fill_dark">#9AA0A6</color>
+
+    <!-- Hidden apps -->
+    <color name="settings_action_bar_color">#ff263238</color>
+    <color name="settings_status_bar_color">#ff21272b</color>
+    <color name="launcher_accent_color">#ff2196f3</color>
+    <color name="icon_settings_background">#ff313131</color>
+    <color name="icon_settings_text">#ffafafaf</color>
 </resources>
