--- a/res/values/syb_string.xml
+++ b/res/values/syb_string.xml
@@ -29,4 +29,13 @@
     <string name="icon_size_average">Average (default)</string>
     <string name="icon_size_large">Large (+10%)</string>
     <string name="icon_size_extra_large">Extra large (+25%)</string>
+
+    <!-- Hidden apps -->
+    <string name="customize">Customize</string>
+    <string name="hide_app">Hide app</string>
+    <string name="hide_app_sum">Hide app from the app drawer</string>
+    <string name="hide_app_selected">&#160;selected</string>
+    <string name="hidden_app">Hidden app</string>
+    <string name="hide_selected">Hide selected app</string>
+    <string name="more">More</string>
 </resources>
