--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -121,4 +121,9 @@
         android:defaultValue="-1"
         android:persistent="true" />
      </PreferenceCategory>
+
+     <Preference
+        android:key="hidden_app"
+        android:title="@string/hide_app"
+        android:summary="@string/hide_app_sum"/>
 </PreferenceScreen>
