--- a/res/values/syb_string.xml
+++ b/res/values/syb_string.xml
@@ -38,4 +38,6 @@
     <string name="hidden_app">Hidden app</string>
     <string name="hide_selected">Hide selected app</string>
     <string name="more">More</string>
+    <string name="reset_hidden_apps">Reset all</string>
+    <string name="reset_hidden_apps_done">Hidden apps are now available</string>
 </resources>
