--- a/res/values/syb_string.xml
+++ b/res/values/syb_string.xml
@@ -40,4 +40,7 @@
     <string name="more">More</string>
     <string name="reset_hidden_apps">Reset all</string>
     <string name="reset_hidden_apps_done">Hidden apps are now available</string>
+
+    <string name="pref_notifications_gesture_title">Notifications gesture</string>
+    <string name="pref_notifications_gesture_summary">Swipe vertically downward on the home screen to show the QS panel</string>
 </resources>
