--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -126,4 +126,11 @@
         android:key="hidden_app"
         android:title="@string/hide_app"
         android:summary="@string/hide_app_sum"/>
+
+    <SwitchPreference
+        android:key="pref_notifications_gesture"
+        android:title="@string/pref_notifications_gesture_title"
+        android:summary="@string/pref_notifications_gesture_summary"
+        android:defaultValue="true"
+        android:persistent="true"/>
 </PreferenceScreen>
