--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -26,6 +26,7 @@
         <item>M50,0L70,0 A30,30,0,0 1 100,30 L100,70 A30,30,0,0 1 70,100 L30,100 A30,30,0,0 1 0,70 L 0,30 A30,30,0,0 1 30,0z</item>
         <item>M50,0 C10,0 0,10 0,50 0,90 10,100 50,100 90,100 100,90 100,50 100,10 90,0 50,0 Z</item>
         <item>M50,0A50,50,0,0 1 100,50 L100,85 A15,15,0,0 1 85,100 L50,100 A50,50,0,0 1 50,0z</item>
+        <item>M 50,0 L 6.699,25 L 6.699,75 L 50,100 L 93.301,75 L 93.301,25 Z</item>
     </string-array>
 
     <string-array translatable="false" name="icon_shape_override_paths_names">
@@ -35,6 +36,7 @@
         <item>@string/icon_shape_rounded_square</item>
         <item>@string/icon_shape_squircle</item>
         <item>@string/icon_shape_teardrop</item>
+        <item>@string/icon_shape_hexagon</item>
     </string-array>
 
 <!-- DragController -->
