--- a/res/values/aosip_strings.xml
+++ b/res/values/aosip_strings.xml
@@ -99,4 +99,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="label_search">Search</string>
     <string name="label_voice_search">Voice search</string>
 
+    <!-- Lock desktop -->
+    <string name="lock_desktop_title">Lock desktop</string>
+    <string name="lock_desktop_summary">Prevent the homescreen from being modified</string>
+
 </resources>
