--- a/res/values/aosip_arrays.xml
+++ b/res/values/aosip_arrays.xml
@@ -28,6 +28,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <item>6</item>
         <item>7</item>
         <item>8</item>
+        <item>9</item>
     </string-array>
 
     <string-array name="pref_homescreen_gestures_names">
@@ -40,6 +41,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <item>@string/pref_homescreen_gestures_screenshot</item>
         <item>@string/pref_homescreen_gestures_notifications</item>
         <item>@string/pref_homescreen_gestures_qs_panel</item>
+        <item>@string/pref_homescreen_gesture_all_apps</item>
     </string-array>
 
     <!-- Grid layout -->
